--- a/iOStarter/Storyboard/Main.storyboard
+++ b/iOStarter/Storyboard/Main.storyboard
@@ -1,53 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yJM-4P-Dcf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NWo-AX-HYH">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Launch ScreenVC-->
-        <scene sceneID="Wla-eU-xoX">
-            <objects>
-                <viewController storyboardIdentifier="LaunchScreenVC" id="yJM-4P-Dcf" customClass="LaunchScreenVC" customModule="Test8" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ugo-kf-Eyu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2022. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="lOm-V7-Ymm">
-                                <rect key="frame" x="20" y="821" width="374" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOStarter" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="f0x-Ky-SKa">
-                                <rect key="frame" x="0.0" y="278" width="414" height="43"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="wrc-K5-Oma"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="lOm-V7-Ymm" firstAttribute="leading" secondItem="wrc-K5-Oma" secondAttribute="leading" constant="20" id="6J5-cj-MvA"/>
-                            <constraint firstItem="f0x-Ky-SKa" firstAttribute="centerY" secondItem="ugo-kf-Eyu" secondAttribute="bottom" multiplier="1/3" constant="1" id="8SG-bo-VC1"/>
-                            <constraint firstItem="wrc-K5-Oma" firstAttribute="trailing" secondItem="lOm-V7-Ymm" secondAttribute="trailing" constant="20" id="9Mw-CG-IN4"/>
-                            <constraint firstItem="wrc-K5-Oma" firstAttribute="centerX" secondItem="f0x-Ky-SKa" secondAttribute="centerX" id="MlZ-bU-Pfv"/>
-                            <constraint firstItem="wrc-K5-Oma" firstAttribute="bottom" secondItem="lOm-V7-Ymm" secondAttribute="bottom" constant="20" id="U3F-5t-WHe"/>
-                            <constraint firstItem="f0x-Ky-SKa" firstAttribute="leading" secondItem="wrc-K5-Oma" secondAttribute="leading" symbolic="YES" id="tV0-bG-LSo"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SPU-40-olp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="142.02898550724638" y="67.633928571428569"/>
-        </scene>
         <!--Tab Bar MenuVC-->
         <scene sceneID="4ro-mk-r32">
             <objects>
-                <tabBarController storyboardIdentifier="TabBarMenuVC" id="NWo-AX-HYH" customClass="TabBarMenuVC" customModule="Test8" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarMenuVC" id="NWo-AX-HYH" customClass="TabBarMenuVC" customModule="iOStarter" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xck-MK-vZW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
