--- a/iOStarter/Storyboard/Menu.storyboard
+++ b/iOStarter/Storyboard/Menu.storyboard
@@ -149,7 +149,7 @@
         <!--title.example-->
         <scene sceneID="wyM-iH-KFI">
             <objects>
-                <viewController storyboardIdentifier="ExampleVC" id="ssq-FX-45Z" customClass="ExampleVC" customModule="iOStarter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailVC" id="ssq-FX-45Z" customClass="DetailVC" customModule="iOStarter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1Bt-9R-m2W">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
