--- a/iOStarter/View/Alert/UI/AlertSheetView.xib
+++ b/iOStarter/View/Alert/UI/AlertSheetView.xib
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AlertSheetController" customModule="iOStarter" customModuleProvider="target">
             <connections>
-                <outlet property="actionButton" destination="aJb-af-g3f" id="xa9-9Y-pIW"/>
                 <outlet property="alertView" destination="pLN-7n-rrV" id="Lke-RA-rWH"/>
+                <outlet property="cancelButton" destination="aJb-af-g3f" id="BZK-9M-sfY"/>
                 <outlet property="imageView" destination="h85-Y8-jXl" id="X1y-Ho-jHf"/>
                 <outlet property="messageLabel" destination="SCo-0v-opA" id="JmN-l6-Fme"/>
+                <outlet property="submitButton" destination="uMJ-0f-m6J" id="Gbv-Wg-OMQ"/>
                 <outlet property="titleLabel" destination="OGA-eJ-CNv" id="Oed-r1-GDg"/>
                 <outlet property="view" destination="gqx-4K-WV2" id="z09-an-993"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="gqx-4K-WV2">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="gqx-4K-WV2">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLN-7n-rrV" customClass="View" customModule="iOStarter" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="666.5" width="414" height="229.5"/>
+                    <rect key="frame" x="0.0" y="632.5" width="414" height="229.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="drX-hT-dlU">
                             <rect key="frame" x="16" y="20" width="382" height="144.5"/>
@@ -50,10 +52,19 @@
                             <rect key="frame" x="0.0" y="184.5" width="414" height="45"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJb-af-g3f">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="207" height="45"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="45" id="6OD-On-PSo"/>
                                         <constraint firstAttribute="width" priority="750" constant="110" id="aQq-HD-lEm"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <state key="normal" title="Cancel"/>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uMJ-0f-m6J">
+                                    <rect key="frame" x="207" y="0.0" width="207" height="45"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" priority="750" constant="110" id="BsT-oP-Dq2"/>
+                                        <constraint firstAttribute="height" constant="45" id="Wai-6l-uid"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <state key="normal" title="OK"/>
@@ -83,14 +94,15 @@
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="ucT-Df-NZX"/>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="ucT-Df-NZX" firstAttribute="bottom" secondItem="pLN-7n-rrV" secondAttribute="bottom" id="B8g-JK-24E"/>
                 <constraint firstAttribute="trailing" secondItem="pLN-7n-rrV" secondAttribute="trailing" id="SPV-vw-mVQ"/>
-                <constraint firstAttribute="bottom" secondItem="pLN-7n-rrV" secondAttribute="bottom" id="UcD-Is-sH3"/>
                 <constraint firstItem="pLN-7n-rrV" firstAttribute="leading" secondItem="gqx-4K-WV2" secondAttribute="leading" id="z4E-Ok-8od"/>
                 <constraint firstItem="pLN-7n-rrV" firstAttribute="width" secondItem="gqx-4K-WV2" secondAttribute="width" id="zw1-hd-Ap9"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="118"/>
+            <point key="canvasLocation" x="137.68115942028987" y="117.85714285714285"/>
         </view>
     </objects>
 </document>
